<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApplication</string>
    <string name="weather">Погода</string>
    <string name="temperature">+26&#x2103;</string>
    <string name="state">Облачно, без осадков</string>
    <string name="continue_button">Продолжить</string>
    <string name="input_search_text">Введите город</string>
    <string name="humidity">Влажность 10%</string>
    <string name="cb_humidity">Влажность</string>
    <string name="error_empty_value">Поле не может быть пустое</string>
    <string name="exit">Выйти</string>
    <string name="pressure">Давление</string>
    <string name="pressure_text">Давление выше нормы</string>
    <string name="weekly_weather">Погода на неделю</string>
    <string name="item_text">Пункт</string>
    <string name="empty_error">Поле не может быть пустым</string>
    <string name="toolbar_text">Погода на неделю</string>
    <string name="user_name">test@test.ru</string>
    <string name="support">Support</string>
    <string name="feedback">Обратная связь</string>
    <string name="about">О разработчике:</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="clear">Очистить</string>
    <string name="developer_alla">Developer Alla</string>
    <string name="stub">Заглушка</string>
    <string name="about_nav_item">О разработчике</string>
    <string name="search_city">Поиск города</string>
    <string name="update_menu" translatable="false">Обновить</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="city_not_found">Город не найден</string>
    <string name="error_server">Ошибка обработки запроса</string>
    <string name="internet_fail">Нет подлючения к сети</string>
    <string name="lost_token">Потерялся токен</string>
    <string name="change_request">Исправьте запрос</string>

</resources>
