<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/search_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/continue_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_humidity" />

    <EditText
        android:id="@+id/search_input"
        style="@style/InputTextStyle"
        android:layout_width="@dimen/width_search_text"
        android:layout_height="@dimen/height_search_text"
        android:hint="@string/input_search_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <CheckBox
        android:id="@+id/cb_pressure"
        style="@style/CheckBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input" />

    <CheckBox
        android:id="@+id/cb_humidity"
        style="@style/CheckBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>