<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/weather"
        style="@style/TextViewMediumStyle.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/temperature"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_temperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_weather" />

    <TextView
        android:id="@+id/humidity"
        style="@style/TextViewMediumStyle.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stateHumidity" />

    <TextView
        android:id="@+id/pressure"
        style="@style/TextViewMediumStyle.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity" />

    <TextView
        android:id="@+id/stateHumidity"
        style="@style/TextViewMediumStyle.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <ImageView
        android:id="@+id/image_weather"
        style="@style/ImageViewStyle"
        android:layout_width="@dimen/image_view_width"
        android:layout_height="@dimen/image_view_height"
        android:src="@drawable/ic_sivvus_weather"
        app:layout_constraintBottom_toTopOf="@id/temperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <Button
        android:id="@+id/weekly_btn"
        app:layout_constraintTop_toBottomOf="@id/pressure"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/ic_gold_button_009"
        android:text="@string/weekly_weather"
        android:padding="@dimen/padding_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/temperature_sensor"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/weekly_btn"/>

    <TextView
        android:id="@+id/humidity_sensor"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/temperature_sensor"/>


</androidx.constraintlayout.widget.ConstraintLayout>